--- a/style/exibir.css
+++ b/style/exibir.css
@@ -25,6 +25,7 @@ overflow-y: scroll;
     background: var(--background-2);
     border: 2px solid var(--buttons-color);
     max-width: 32%;
+    position: relative;
 }
 .card h2{
     color: var(--font-color-2);
