--- a/style/media.css
+++ b/style/media.css
@@ -1,11 +1,18 @@
-@media screen and (max-width: 768px){
- #demandas-container{
-width: 90%;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
+@media screen and (max-width: 768px) {
+  #demandas-container {
+    width: 90%;
+  }
+  .card {
+    width: 100%;
+    max-width: 90%;
+  }
+  .title {
+    max-width: 50%;
+  }
+  #edit-message{
+
+    top: 90px;
+
 }
-.card{
-width: 100%;
+
 }
