--- a/style/style.css
+++ b/style/style.css
@@ -36,8 +36,8 @@ body {
 }
 .voltar {
   position: absolute;
-  top: 50px;
-  left: 50px;
+  top: 20px;
+  left: 20px;
   text-decoration: none;
   color: var(--buttons-color);
   font-weight: 600;
@@ -188,11 +188,12 @@ button:hover.excluir {
 
 #edit-message{
     position: absolute;
-    top: 50px;
-    width: 40%;
+    top: 53px;
+    width: 50%;
     text-align: center;
     padding: 10px;
     border-radius: 5px;
+    z-index: 100;
 }
 #edit-message.success,
 .confirm{
