--- a/style/exibir.css
+++ b/style/exibir.css
@@ -29,27 +29,76 @@
   max-width: 49%;
   width: 49%;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  /* min-height: fit-content; */
 }
 .card h2 {
   color: var(--font-color-2);
   text-align: center;
-  margin: 5px 20px 20px 20px;
+  height: 15%;
 }
-.card p {
+.card .conteudo{
+  height: 67.5%;
+  width: 100%;
+}
+.card .buttons-container{
+  width: 100%;
+  height: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 2.5%;
+}
+.card .buttons-container button{
+  max-width: 100px;
+}
+.card .conteudo p {
   display: flex;
   /* flex-direction: column; */
   margin: 5px 0;
   color: var(--font-color-2);
 }
-.card p span {
+.card .conteudo p span {
   font-weight: 600;
   color: var(--buttons-color);
   padding-right: 5px;
 }
-.card p .status {
+.card .conteudo p span.description{
+  color: black;
+  font-weight: 400;
+  max-height: 50px;
+  overflow-y: scroll; 
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.card .conteudo p span.description::-webkit-scrollbar {
+  display: none;
+}
+.card .conteudo p.status {
   font-weight: 400;
   color: var(--font-color-2);
 }
+.card .conteudo p span.status.status-cadastrada {
+  color: black; 
+}
+
+.card .conteudo p span.status.status-enviado {
+  color: blue;
+}
+
+.card .conteudo p span.status.status-verificando {
+  color: yellow; 
+}
+
+.card .conteudo p span.status.status-corrigido {
+  color: green;
+}
+
 .confirm {
   color: var(--color-success);
   background: var(--background-2);
