--- a/style/exibir.css
+++ b/style/exibir.css
@@ -3,21 +3,47 @@
   width: 100%;
   min-height: 100vh;
   padding: 20px;
+  justify-content:unset;
 }
+.pesquisa{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  color: var(--font-color);
+  font-weight: 500;
+  border: 2px solid var(--buttons-color);
+  padding: 8px 15px;
+  border-radius: 5px;
+  outline: none;
+  background: var(--background-color);
+  z-index: 10000;
+}
+.pesquisa:focus{
+  box-shadow: 0 0 5px var(--buttons-color);
+  background: var(--background-2);
+  color: var(--font-color-2);
+}
+.pesquisa::placeholder{
+  font-weight: 300;
+  color: var(--buttons-color);
+}
+
 #demandas-container {
   width: 85%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 2%;
-  overflow-y: scroll; 
+  overflow-y: scroll;
+  margin-top: 100px;
 }
 h1.title {
-  position: relative;
+  position: absolute;
   padding: 40px 0;
   color: var(--font-color);
   text-transform: uppercase;
   text-align: center;
+  top: 20px;
 }
 /* Estilo dos cartões */
 .card {
