--- a/style/exibir.css
+++ b/style/exibir.css
@@ -3,9 +3,9 @@
   width: 100%;
   min-height: 100vh;
   padding: 20px;
-  justify-content:unset;
+  justify-content: unset;
 }
-.pesquisa{
+.pesquisa {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -18,12 +18,12 @@
   background: var(--background-color);
   z-index: 10000;
 }
-.pesquisa:focus{
+.pesquisa:focus {
   box-shadow: 0 0 5px var(--buttons-color);
   background: var(--background-2);
   color: var(--font-color-2);
 }
-.pesquisa::placeholder{
+.pesquisa::placeholder {
   font-weight: 300;
   color: var(--buttons-color);
 }
@@ -69,11 +69,11 @@ h1.title {
   align-items: center;
   justify-content: center;
 }
-.card .conteudo{
+.card .conteudo {
   height: 67.5%;
   width: 100%;
 }
-.card .buttons-container{
+.card .buttons-container {
   width: 100%;
   height: 15%;
   display: flex;
@@ -82,7 +82,7 @@ h1.title {
   gap: 10px;
   padding: 2.5% 0;
 }
-.card .buttons-container button{
+.card .buttons-container button {
   max-width: 100px;
 }
 .card .conteudo p {
@@ -96,21 +96,25 @@ h1.title {
   color: var(--buttons-color);
   padding-right: 5px;
 }
-.card .conteudo p span.description{
+.card .conteudo p span.description {
   color: black;
   font-weight: 400;
   max-height: 50px;
-  overflow-y: scroll; 
+  overflow-y: scroll;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
-.card .conteudo p span.usuarios{
- overflow-x: scroll;
- scrollbar-width: none;
+.card .conteudo p span.usuarios {
+  overflow-x: scroll;
+  scrollbar-width: none;
   -ms-overflow-style: none;
+  color: black;
+  font-weight: 400;
+  max-width: 90%;
 }
 
-.card .conteudo p span.description::-webkit-scrollbar {
+.card .conteudo p span.description::-webkit-scrollbar,
+.card .conteudo p span.usuarios::-webkit-scrollbar {
   display: none;
 }
 .card .conteudo p.status {
@@ -118,7 +122,7 @@ h1.title {
   color: var(--font-color-2);
 }
 .card .conteudo p span.status.status-cadastrada {
-  color: black; 
+  color: black;
 }
 
 .card .conteudo p span.status.status-enviado {
@@ -126,7 +130,7 @@ h1.title {
 }
 
 .card .conteudo p span.status.status-verificando {
-  color: yellow; 
+  color: yellow;
 }
 
 .card .conteudo p span.status.status-corrigido {
