--- a/style/exibir.css
+++ b/style/exibir.css
@@ -36,6 +36,7 @@
   gap: 2%;
   overflow-y: scroll;
   margin-top: 100px;
+  padding: 10px;
 }
 h1.title {
   position: absolute;
@@ -135,6 +136,24 @@ h1.title {
 
 .card .conteudo p span.status.status-corrigido {
   color: green;
+}
+
+
+.card.cadastrada{
+  border: 3px solid black;
+  box-shadow: 0 0 10px black;
+}
+.card.enviado{
+  border: 3px solid blue;
+  box-shadow: 0 0 10px blue;
+}
+.card.verificando{
+  border: 3px solid yellow;
+  box-shadow: 0 0 10px yellow;
+}
+.card.corrigido{
+  border: 3px solid green;
+  box-shadow: 0 0 10px green;
 }
 
 .confirm {
