--- a/style/media.css
+++ b/style/media.css
@@ -1,10 +1,12 @@
 @media screen and (max-width: 433px) {
   #demandas-container {
     width: 98%;
+min-width: 98%;
     margin-top: 120px;
   }
   .card {
     width: 100%;
+ min-width: 100%;
   }
   h1.title {
     margin-top: 10px;
@@ -16,10 +18,12 @@
 @media screen and (max-width: 568px) {
   #demandas-container {
     width: 95%;
+min-width: 100%;
     /* margin-top: 120px; */
   }
   .card {
     width: 100%;
+min-width: 100%;
   }
   h1.title {
     margin-top: 10px;
@@ -33,8 +37,8 @@
     /* margin-top: 140px; */
   }
   .card {
-    width: 90%;
-    max-width: 90%;
+    width: 95%;
+    max-width: 95%;
   }
   h1.title {
     margin-top: 10px;
