--- a/style/media.css
+++ b/style/media.css
@@ -1,23 +1,23 @@
 @media screen and (max-width: 345px) {
-  .card .buttons-container button{
+  .card .buttons-container button {
     font-size: 50%;
   }
 }
 
 @media screen and (max-width: 380px) {
-  .card .buttons-container button{
+  .card .buttons-container button {
     font-size: 70%;
   }
 }
 @media screen and (max-width: 433px) {
   #demandas-container {
     width: 98%;
-min-width: 98%;
+    min-width: 98%;
     margin-top: 120px;
   }
   .card {
     width: 100%;
- min-width: 100%;
+    min-width: 100%;
   }
   h1.title {
     margin-top: 10px;
@@ -29,12 +29,12 @@ min-width: 98%;
 @media screen and (max-width: 568px) {
   #demandas-container {
     width: 95%;
-min-width: 100%;
+    min-width: 100%;
     /* margin-top: 120px; */
   }
   .card {
     width: 100%;
-min-width: 100%;
+    min-width: 100%;
   }
   h1.title {
     margin-top: 10px;
@@ -55,22 +55,53 @@ min-width: 100%;
     margin-top: 10px;
     max-width: 80%;
   }
-  .card h2{
+  .card h2 {
     font-size: 1.5rem;
   }
-  #edit-message{
+  #edit-message {
     top: 90px;
-}
+  }
 
 }
-@media screen and (min-width: 900px){
+@media screen and (max-width: 1200px) {
+  .filtroContainer .filtro-control p{
+    font-size: 80%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .filtroContainer{
+    z-index: 1000;
+    backdrop-filter: blur(90px);
+    overflow: hidden;
+    padding: 1px;
+    height: 30px;
+    width: 30px;
+  }
+  .filtroContainer #openFiltro{
+    font-size: 25px;
+  }
+  .filtroContainer .filtro-control p{
+    font-size: 15px;
+  }
+  .filtroContainer.open{
+    height: fit-content;
+    width: fit-content;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .filtroContainer #openFiltro{
+    display: none;
+  }
+}
+
+@media screen and (min-width: 900px) {
   .card {
     width: 40%;
     max-width: 40%;
   }
 }
-@media screen and (min-width: 1800px){
-  .card .conteudo{
+@media screen and (min-width: 1800px) {
+  .card .conteudo {
     width: 80%;
   }
 }
